--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ env:
   CARGO_TERM_COLOR: always
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   MSRV: "1.76.0"
+  CARGO_BUILD_RUSTFLAGS: -D warnings
 
 # Cancel any currently running workflows from the same PR, branch, or
 # tag when a new workflow is triggered.
