--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -73,6 +73,16 @@ name              = "uart_async"
 harness           = false
 required-features = ["async", "embassy"]
 
+[[test]]
+name    = "uart_tx_rx"
+harness = false
+
+
+[[test]]
+name    = "uart_tx_rx_async"
+harness = false
+
+
 [dependencies]
 cfg-if             = "1.0.0"
 critical-section   = "1.1.2"
