--- a/esp-println/Cargo.toml
+++ b/esp-println/Cargo.toml
@@ -22,7 +22,7 @@ portable-atomic  = { version = "1.6.0",  optional = true, default-features = fal
 esp-build = { version = "0.1.0", path = "../esp-build" }
 
 [features]
-default = ["dep:critical-section", "colors", "uart"]
+default = ["dep:critical-section", "colors", "auto"]
 log     = ["dep:log"]
 
 # You must enable exactly 1 of the below features to support the correct chip:
@@ -36,10 +36,13 @@ esp32s2 = []
 esp32s3 = []
 
 # You must enable exactly 1 of the below features to enable to intended
-# communication method (note that "uart" is enabled by default):
+# communication method (note that "auto" is enabled by default):
 jtag-serial = ["dep:portable-atomic"] # C3, C6, H2, P4, and S3 only!
-no-op       = []
 uart        = []
+auto        = ["dep:portable-atomic"]
+
+# Don't print anything
+no-op       = []
 
 # Enables a `defmt` backend usable with espflash. We force rzcobs encoding to simplify implementation
 defmt-espflash = ["dep:defmt", "defmt?/encoding-rzcobs"]
