Add RMT hil-test

--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -53,6 +53,10 @@ name    = "spi_full_duplex_dma"
 harness = false
 
 [[test]]
+name    = "rmt"
+harness = false
+
+[[test]]
 name    = "rsa"
 harness = false
 
