esp-backtrace: Fix for nightly after 2024-06-12

--- a/esp-backtrace/Cargo.toml
+++ b/esp-backtrace/Cargo.toml
@@ -18,6 +18,7 @@ semihosting = { version = "0.1.10", optional = true }
 
 [build-dependencies]
 esp-build = { version = "0.1.0", path = "../esp-build" }
+rustversion = "1.0.17"
 
 [features]
 default = ["colors"]
