--- a/esp-hal-embassy/Cargo.toml
+++ b/esp-hal-embassy/Cargo.toml
@@ -15,7 +15,7 @@ features       = ["esp32c6", "time-timg0"]
 critical-section    = "1.1.2"
 defmt               = { version = "0.3.8", optional = true }
 document-features   = "0.2.8"
-embassy-executor    = "0.5.0"
+embassy-executor    = { version = "0.5.0", optional = true }
 embassy-time-driver = "0.1.0"
 esp-hal             = { version = "0.18.0", path = "../esp-hal" }
 portable-atomic     = "1.6.0"
@@ -26,6 +26,8 @@ esp-build    = { version = "0.1.0", path = "../esp-build" }
 esp-metadata = { version = "0.1.1", path = "../esp-metadata" }
 
 [features]
+default = ["executors"]
+
 esp32   = ["esp-hal/esp32"]
 esp32c2 = ["esp-hal/esp32c2"]
 esp32c3 = ["esp-hal/esp32c3"]
@@ -35,9 +37,11 @@ esp32s2 = ["esp-hal/esp32s2"]
 esp32s3 = ["esp-hal/esp32s3"]
 
 ## Implement `defmt::Format` on certain types.
-defmt = ["dep:defmt", "embassy-executor/defmt", "esp-hal/defmt"]
+defmt = ["dep:defmt", "embassy-executor?/defmt", "esp-hal/defmt"]
+## Provide `Executor` and `InterruptExecutor`
+executors = ["dep:embassy-executor"]
 ## Use the executor-integrated `embassy-time` timer queue.
-integrated-timers = ["embassy-executor/integrated-timers"]
+integrated-timers = ["embassy-executor?/integrated-timers"]
 
 #! ### Time Driver Feature Flags
 ## SYSTIMER (16MHz)
