--- a/esp-backtrace/Cargo.toml
+++ b/esp-backtrace/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name         = "esp-backtrace"
-version      = "0.12.0"
+version      = "0.12.1"
 edition      = "2021"
 rust-version = "1.76.0"
-description  = "Bare-metal backtrace support for ESP32"
+description  = "Bare-metal backtrace support for Espressif devices"
 repository   = "https://github.com/esp-rs/esp-hal"
 license      = "MIT OR Apache-2.0"
 
