--- a/esp-ieee802154/Cargo.toml
+++ b/esp-ieee802154/Cargo.toml
@@ -16,19 +16,19 @@ bench = false
 test  = false
 
 [dependencies]
-byte             = "0.2.7"
-critical-section = "1.1.2"
-esp-hal          = { version = "0.18.0", path = "../esp-hal" }
-esp-wifi-sys     = { git = "https://github.com/esp-rs/esp-wifi", rev = "2ceb4b3" }
-heapless         = "0.8.0"
-ieee802154       = "0.6.1"
-log              = "0.4.21"
-vcell            = "0.1.3"
+byte              = "0.2.7"
+critical-section  = "1.1.2"
+document-features = "0.2.8"
+esp-hal           = { version = "0.18.0", path = "../esp-hal" }
+esp-wifi-sys      = { git = "https://github.com/esp-rs/esp-wifi", rev = "2ceb4b3" }
+heapless          = "0.8.0"
+ieee802154        = "0.6.1"
+log               = "0.4.21"
+vcell             = "0.1.3"
 
 [features]
-default = []
 esp32c6 = ["esp-hal/esp32c6", "esp-wifi-sys/esp32c6"]
 esp32h2 = ["esp-hal/esp32h2", "esp-wifi-sys/esp32h2"]
 
-## Output logging from the phy blobs. Requires nightly
+## Output logging from the PHY blobs. Requires nightly.
 binary-logs = []
