added hil-test for Mem2Mem

--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -25,6 +25,10 @@ name    = "delay"
 harness = false
 
 [[test]]
+name    = "dma_mem2mem"
+harness = false
+
+[[test]]
 name    = "ecc"
 harness = false
 
