--- a/esp-hal-embassy/Cargo.toml
+++ b/esp-hal-embassy/Cargo.toml
@@ -16,9 +16,10 @@ critical-section    = "1.1.2"
 defmt               = { version = "0.3.8", optional = true }
 document-features   = "0.2.8"
 embassy-executor    = { version = "0.5.0", optional = true }
-embassy-time-driver = "0.1.0"
+embassy-time-driver = { version = "0.1.0", features = [ "tick-hz-1_000_000" ] }
 esp-hal             = { version = "0.18.0", path = "../esp-hal" }
 portable-atomic     = "1.6.0"
+log = { version = "0.4.22", optional = true }
 
 [build-dependencies]
 cfg-if       = "1.0.0"
@@ -38,15 +39,9 @@ esp32s3 = ["esp-hal/esp32s3"]
 
 ## Implement `defmt::Format` on certain types.
 defmt = ["dep:defmt", "embassy-executor?/defmt", "esp-hal/defmt"]
+## Enable logging via the log crate
+log = ["dep:log"]
 ## Provide `Executor` and `InterruptExecutor`
 executors = ["dep:embassy-executor"]
 ## Use the executor-integrated `embassy-time` timer queue.
 integrated-timers = ["embassy-executor?/integrated-timers"]
-
-#! ### Time Driver Feature Flags
-## SYSTIMER (16MHz)
-time-systimer-16mhz = ["embassy-time-driver/tick-hz-16_000_000"]
-## SYSTIMER (80MHz)
-time-systimer-80mhz = ["embassy-time-driver/tick-hz-80_000_000"]
-## TIMG0 (1MHz)
-time-timg0 = ["embassy-time-driver/tick-hz-1_000_000"]
