--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -106,6 +106,7 @@ esp-backtrace      = { path = "../esp-backtrace", default-features = false, feat
 esp-hal            = { path = "../esp-hal", features = ["defmt", "embedded-hal", "embedded-hal-02"], optional = true }
 esp-hal-embassy    = { path = "../esp-hal-embassy", optional = true }
 portable-atomic    = "1.6.0"
+static_cell        = { version = "2.0.0", features = ["nightly"] }
 
 [dev-dependencies]
 crypto-bigint       = { version = "0.5.5", default-features = false }
@@ -122,7 +123,7 @@ p256                = { version = "0.13.2", default-features = false, features =
 semihosting = { git = "https://github.com/taiki-e/semihosting", tag = "v0.1.10" }
 
 [features]
-default = ["async", "embassy", "embassy-time-timg0"]
+default = ["async", "embassy"]
 
 # Device support (required!):
 esp32 = [
@@ -154,9 +155,6 @@ embassy = [
     "embedded-test/external-executor",
     "dep:esp-hal-embassy",
 ]
-embassy-time-systimer-16mhz = ["esp-hal-embassy/time-systimer-16mhz"]
-embassy-time-systimer-80mhz = ["esp-hal-embassy/time-systimer-80mhz"]
-embassy-time-timg0 = ["esp-hal-embassy/time-timg0"]
 
 # https://doc.rust-lang.org/cargo/reference/profiles.html#test
 # Test and bench profiles inherit from dev and release respectively.
