Add SPI Half Duplex Write HIL test

--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -65,6 +65,10 @@ name    = "spi_half_duplex_read"
 harness = false
 
 [[test]]
+name    = "spi_half_duplex_write"
+harness = false
+
+[[test]]
 name    = "pcnt"
 harness = false
 
