--- a/esp-hal/Cargo.toml
+++ b/esp-hal/Cargo.toml
@@ -15,14 +15,14 @@ features       = ["embedded-hal", "esp32c6"]
 rustdoc-args   = ["--cfg", "docsrs"]
 
 [dependencies]
-bitflags                 = "2.5.0"
-bytemuck                 = "1.0.0"
+bitflags                 = "2.6.0"
+bytemuck                 = "1.16.1"
 bitfield                 = "0.15.0"
 cfg-if                   = "1.0.0"
 critical-section         = "1.1.2"
 defmt                    = { version = "0.3.8", optional = true }
 delegate                 = "0.12.0"
-document-features        = "0.2.8"
+document-features        = "0.2.10"
 embassy-futures          = { version = "0.1.1", optional = true }
 embassy-sync             = { version = "0.6.0", optional = true }
 embassy-usb-driver       = { version = "0.1.0", optional = true }
@@ -36,15 +36,15 @@ embedded-hal-nb          = { version = "1.0.0", optional = true }
 embedded-io              = { version = "0.6.1", optional = true }
 embedded-io-async        = { version = "0.6.1", optional = true }
 enumset                  = "1.1.3"
-esp-synopsys-usb-otg     = { version = "0.4.1", optional = true, features = ["fs", "esp32sx"] }
+esp-synopsys-usb-otg     = { version = "0.4.2", optional = true, features = ["fs", "esp32sx"] }
 fugit                    = "0.3.7"
-log                      = { version = "0.4.21", optional = true }
+log                      = { version = "0.4.22", optional = true }
 nb                       = "1.1.0"
 paste                    = "1.0.15"
 portable-atomic          = { version = "1.6.0", default-features = false }
-procmacros               = { version = "0.11.0", features = ["embassy", "enum-dispatch", "interrupt", "ram"], package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
+procmacros               = { version = "0.12.0", features = ["embassy", "enum-dispatch", "interrupt", "ram"], package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
 riscv                    = { version = "0.11.1", optional = true }
-strum                    = { version = "0.26.2", default-features = false, features = ["derive"] }
+strum                    = { version = "0.26.3", default-features = false, features = ["derive"] }
 void                     = { version = "1.0.2", default-features = false }
 usb-device               = { version = "0.3.2", optional = true }
 rand_core                = "0.6.4"
@@ -54,16 +54,16 @@ xtensa-lx                = { version = "0.9.0", optional = true }
 # IMPORTANT:
 # Each supported device MUST have its PAC included below along with a
 # corresponding feature.
-esp32   = { git = "https://github.com/esp-rs/esp-pacs", rev = "a7c72f7", features = ["critical-section", "rt"], optional = true }
-esp32c2 = { git = "https://github.com/esp-rs/esp-pacs", rev = "a7c72f7", features = ["critical-section", "rt"], optional = true }
-esp32c3 = { git = "https://github.com/esp-rs/esp-pacs", rev = "a7c72f7", features = ["critical-section", "rt"], optional = true }
-esp32c6 = { git = "https://github.com/esp-rs/esp-pacs", rev = "a7c72f7", features = ["critical-section", "rt"], optional = true }
-esp32h2 = { git = "https://github.com/esp-rs/esp-pacs", rev = "a7c72f7", features = ["critical-section", "rt"], optional = true }
-esp32s2 = { git = "https://github.com/esp-rs/esp-pacs", rev = "a7c72f7", features = ["critical-section", "rt"], optional = true }
-esp32s3 = { git = "https://github.com/esp-rs/esp-pacs", rev = "a7c72f7", features = ["critical-section", "rt"], optional = true }
+esp32   = { version = "0.32.0", features = ["critical-section", "rt"], optional = true }
+esp32c2 = { version = "0.21.0", features = ["critical-section", "rt"], optional = true }
+esp32c3 = { version = "0.24.0", features = ["critical-section", "rt"], optional = true }
+esp32c6 = { version = "0.15.0", features = ["critical-section", "rt"], optional = true }
+esp32h2 = { version = "0.11.0", features = ["critical-section", "rt"], optional = true }
+esp32s2 = { version = "0.23.0", features = ["critical-section", "rt"], optional = true }
+esp32s3 = { version = "0.27.0", features = ["critical-section", "rt"], optional = true }
 
 [target.'cfg(target_arch = "riscv32")'.dependencies]
-esp-riscv-rt = { version = "0.8.0", path = "../esp-riscv-rt" }
+esp-riscv-rt = { version = "0.9.0", path = "../esp-riscv-rt" }
 
 [target.'cfg(target_arch = "xtensa")'.dependencies]
 xtensa-lx-rt = "0.16.0"
@@ -72,8 +72,8 @@ xtensa-lx-rt = "0.16.0"
 basic-toml   = "0.1.9"
 cfg-if       = "1.0.0"
 esp-build    = { version = "0.1.0", path = "../esp-build" }
-esp-metadata = { version = "0.1.1", path = "../esp-metadata" }
-serde        = { version = "1.0.203", features = ["derive"] }
+esp-metadata = { version = "0.2.0", path = "../esp-metadata" }
+serde        = { version = "1.0.204", features = ["derive"] }
 
 [features]
 default = ["embedded-hal"]
