--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,6 +107,8 @@ jobs:
           components: rust-src
       - name: Check doc-tests
         run: cargo xtask run-doc-test esp-hal ${{ matrix.device.soc }}
+      - name: Check documentation
+        run:  cargo xtask build-documentation --packages esp-hal --chips ${{ matrix.device.soc }}
 
   esp-lp-hal:
     runs-on: ubuntu-latest
@@ -131,7 +133,8 @@ jobs:
       # Build all supported examples for the specified device:
       - name: Build examples
         run: cargo xtask build-examples esp-lp-hal ${{ matrix.soc }}
-
+      - name: Check documentation
+        run:  cargo xtask build-documentation --packages esp-lp-hal --chips ${{ matrix.soc }}
   esp-riscv-rt:
     runs-on: ubuntu-latest
 
@@ -184,6 +187,12 @@ jobs:
           target: riscv32imc-unknown-none-elf,riscv32imac-unknown-none-elf
           toolchain: stable
           components: rust-src
+      - if: ${{ !contains(fromJson('["esp32", "esp32s2", "esp32s3"]'), matrix.device.soc) }}
+        uses: dtolnay/rust-toolchain@v1
+        with:
+          target: riscv32imc-unknown-none-elf,riscv32imac-unknown-none-elf
+          toolchain: nightly
+          components: rust-src
       # Install the Rust toolchain for Xtensa devices:
       - if: contains(fromJson('["esp32", "esp32s2", "esp32s3"]'), matrix.device.soc)
         uses: esp-rs/xtensa-toolchain@v1.5
@@ -209,7 +218,8 @@ jobs:
             --features=${{ matrix.device.soc }},log,defmt-espflash \
             --target=${{ matrix.device.target }} \
             esp-println
-
+      - name: Check documentation
+        run:  cargo xtask build-documentation --packages esp-println --chips ${{ matrix.device.soc }}
   extras:
     runs-on: ubuntu-latest
 
